replcae Integer.valuteOf() back to new Integer() to support JDK1.4